--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 $ For this project 
-/serpentscribe.egg-info
+/serpentscribe.egg-info/
 # Byte-compiled / optimized / DLL files
-/__pycache__/
+/src/__pycache__/
+
 *.py[cod]
 *$py.class
 
